--- a/todo_join.html
+++ b/todo_join.html
@@ -30,13 +30,14 @@
                         <h3 class="join-title">
                             비밀번호
                         </h3>
-                        <input id="password" name="password" type="text">
+                        <input id="password" name="password" type="password" maxlength="16">
+                        <span id="password-message" style="display: none;"></span>
                     </div>
                     <div class="join-row">
                         <h3 class="join-title">
                             비밀번호 재확인
                         </h3>
-                        <input id="password-reconfirm" name="password-reconfirm" type="text">
+                        <input id="password-reconfirm" name="password-reconfirm" type="password" maxlength="16">
                     </div>
                     <div class="join-row">
                         <h3 class="join-title">
@@ -117,7 +118,8 @@
     </footer>
 
     <!-- JS -->
-    <script type="text/javascript" src="./validationForId.js"></script>
+    <script src="./util.js"></script>
+    <script src="./validation.js"></script>
 
 </body>
 
