이벤트 등록 중복함수 추출

--- a/todo_join.html
+++ b/todo_join.html
@@ -38,6 +38,7 @@
                             비밀번호 재확인
                         </h3>
                         <input id="password-reconfirm" name="password-reconfirm" type="password" maxlength="16">
+                        <span id="password-reconfirm-message" style="display: none;"></span>
                     </div>
                     <div class="join-row">
                         <h3 class="join-title">
