name validation 구현

--- a/todo_join.html
+++ b/todo_join.html
@@ -44,7 +44,8 @@
                         <h3 class="join-title">
                             이름
                         </h3>
-                        <input id="name" name="name" type="text">
+                        <input id="name" name="name" type="text" maxlength="20">
+                        <span id="name-message" style="display: none;"></span>
                     </div>
                     <div class="join-row">
                         <h3 class="join-title">
