gender validation 구현

--- a/todo_join.html
+++ b/todo_join.html
@@ -72,6 +72,7 @@
                             <option value="male">남자</option>
                             <option value="female">여자</option>
                         </select>
+                        <span id="gender-message" class="message fail" style="display: none;">필수 정보입니다.</span>
                     </div>
                     <div class="join-row">
                         <h3 class="join-title">
