--- a/todo_join.html
+++ b/todo_join.html
@@ -79,6 +79,7 @@
                             이메일
                         </h3>
                         <input id="email" type="text">
+                        <span id="email-message" class="message fail" style="display: none;">이메일 주소를 다시 확인해주세요.</span>
                     </div>
                     <div class="join-row">
                         <h3 class="join-title">
