--- a/todo_join.html
+++ b/todo_join.html
@@ -85,7 +85,8 @@
                         <h3 class="join-title">
                             휴대전화
                         </h3>
-                        <input id="phone" type="text">
+                        <input id="phone" type="text" placeholder="- 없이 입력해주세요. 예) 0101231234">
+                        <span id="phone-message" class="message fail" style="display: none;">형식에 맞지 않는 번호입니다.</span>
                     </div>
                     <div class="join-row">
                         <h3 class="join-title">
