--- a/todo_join.html
+++ b/todo_join.html
@@ -56,7 +56,21 @@
                                 <input id="yy" name="yy" type="text" placeholder="년(4자)" maxlength="4">
                             </span>
                             <span class="birthdate-mm">
-                                <input id="mm" name="mm" type="text">
+                                <select id="mm" name="mm" class="sel" aria-label="월">
+                                    <option value="" selected="">월</option>
+                                    <option value="01">1</option>
+                                    <option value="02">2</option>
+                                    <option value="03">3</option>
+                                    <option value="04">4</option>
+                                    <option value="05">5</option>
+                                    <option value="06">6</option>
+                                    <option value="07">7</option>
+                                    <option value="08">8</option>
+                                    <option value="09">9</option>
+                                    <option value="10">10</option>
+                                    <option value="11">11</option>
+                                    <option value="12">12</option>
+                                </select>
                             </span>
                             <span class="birthdate-dd">
                                 <input id="dd" name="dd" type="text" placeholder="일">
