change_font_inherit_setting & make interest textarea

--- a/todo_join.html
+++ b/todo_join.html
@@ -107,7 +107,7 @@
                         <h3 class="join-title">
                             관심사
                         </h3>
-                        <input id="interest" type="text">
+                        <textarea name="interest" id="interest" class="txtarea"></textarea>
                     </div>
                     <div class="term-area">
                         <span class="join-title underline">
@@ -140,6 +140,7 @@
     <!-- JS -->
     <script src="./util.js"></script>
     <script src="./validation.js"></script>
+    <script src="./interest.js"></script>
 
 </body>
 
