관심사 focus구현

--- a/todo_join.html
+++ b/todo_join.html
@@ -107,7 +107,9 @@
                         <h3 class="join-title">
                             관심사
                         </h3>
-                        <textarea name="interest" id="interest" class="txtarea"></textarea>
+                        <div class="interest-input-wrapper">
+                            <input type="text" name="interest" id="interest">
+                        </div>
                     </div>
                     <div class="term-area">
                         <span class="join-title underline">
