기본적인 관심사태그 구현 & 쉼표예외처리

--- a/todo_join.html
+++ b/todo_join.html
@@ -116,7 +116,7 @@
                             약관에 동의합니다.
                         </span>
                         <span class="term-box">
-                            <input type="checkbox" name="term" value="약관에 동의합니다.">
+                            <input type="checkbox" name="term">
                         </span>
                     </div>
                     <div class="button-area">
