--- a/todo_join.html
+++ b/todo_join.html
@@ -110,6 +110,7 @@
                         <div class="interest-input-wrapper">
                             <input type="text" name="interest" id="interest">
                         </div>
+                        <span id="interest-message" class="message fail" style="display: none;">3개 이상의 관심사를 입력하세요.</span>
                     </div>
                     <div class="term-area">
                         <span class="join-title underline">
