버튼의 기본서브밋을 막음

--- a/todo_join.html
+++ b/todo_join.html
@@ -167,6 +167,7 @@
     <script src="./validation.js"></script>
     <script src="./interest.js"></script>
     <script src="./todo_join_modal.js"></script>
+    <script src="./todo_join_button.js"></script>
 
 </body>
 
