가입하기 시 발생하는 오류 모달 구현

--- a/todo_join.html
+++ b/todo_join.html
@@ -182,7 +182,7 @@
         <div class="modal hidden">
             <div class="modal__overlay join__overlay"></div>
             <div class="modal__content join__content">
-                <h2 style="text-align: center">부족한 항목을 입력해주세요.</h2>
+                <h2 style="text-align: center">가입 오류</h2>
                 <div class="init-row">
                 </div>
                 <div class="init-row">
