부트스트랩을 이용한 로그인 페이지 구현

--- a/todo_login.html
+++ b/todo_login.html
@@ -2,9 +2,8 @@
 <html lang="ko">
 
 <head>
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- above: bootstrap login-->
 
     <link rel="stylesheet" type="text/css" href="./reset.css">
@@ -15,42 +14,43 @@
 </head>
 
 <body>
-    <header>
-        <h1 class="header-title">
-            로그인
-        </h1>
-    </header>
-    <section>
-        <div class="wrapper fadeInDown">
-            <div id="formContent">
-                <!-- Tabs Titles -->
-
-                <!-- Icon -->
-                <div class="fadeIn first">
-                    <img src="http://danielzawadzki.com/codepen/01/icon.svg" id="icon" alt="User Icon" />
-                </div>
-
-                <!-- Login Form -->
-                <form>
-                    <input type="text" id="login" class="fadeIn second" name="login" placeholder="login">
-                    <input type="text" id="password" class="fadeIn third" name="login" placeholder="password">
-                    <input type="submit" class="fadeIn fourth" value="Log In">
-                </form>
-
-                <!-- Remind Passowrd -->
-                <div id="formFooter">
-                    <a class="underlineHover" href="#">Forgot Password?</a>
-                </div>
-
+    <div id="wrapper">
+        <header>
+            <div id="title">
+                todo
             </div>
-        </div>
-    </section>
-    <footer>
-        footer
-    </footer>
+        </header>
+        <section id="container">
+            <div id="content">
+                <form action="" id="login" name="login" autocomplete="off" method="POST">
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" name="id" placeholder="아이디" aria-label="Username" aria-describedby="basic-addon1" maxlength="20">
+                    </div>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" name="password" placeholder="비밀번호" aria-label="Username" aria-describedby="basic-addon1" maxlenghth="16">
+                    </div>
+                    <div class="input-row" id="button-area">
+                        <button class="primary-button btn btn-success" id="login-button">
+                            로그인
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </section>
+        <footer>
+        </footer>
+    </div>
 
-
-
+    <!--under bootstrap js-->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
