--- a/todo_join.html
+++ b/todo_join.html
@@ -18,7 +18,7 @@
     </header>
     <section>
         <!-- 회원가입 폼 -->
-        <form class="join_form" action="?">
+        <form class="join_form" action="?" method="POST">
             <div class="wrapper">
                 <div class="join-content">
                     <div class="join-row">
