--- a/todo_login.html
+++ b/todo_login.html
@@ -20,14 +20,14 @@
                 todo
             </div>
         </header>
-        <section id="container">
+        <div id="container">
             <div id="content">
-                <form action="" id="login" name="login" autocomplete="off" method="POST">
+                <form action="?" id="login" name="login" autocomplete="off" method="POST">
                     <div class="input-group mb-3">
-                        <input type="text" class="form-control" name="id" placeholder="아이디" aria-label="Username" aria-describedby="basic-addon1" maxlength="20">
+                        <input type="text" class="form-control" name="id" placeholder="아이디" aria-label="ID" maxlength="20">
                     </div>
                     <div class="input-group mb-3">
-                        <input type="text" class="form-control" name="password" placeholder="비밀번호" aria-label="Username" aria-describedby="basic-addon1" maxlenghth="16">
+                        <input type="text" class="form-control" name="password" placeholder="비밀번호" aria-label="Password" maxlength="16">
                     </div>
                     <div class="input-row" id="button-area">
                         <button class="primary-button btn btn-success" id="login-button">
@@ -36,7 +36,7 @@
                     </div>
                 </form>
             </div>
-        </section>
+        </div>
         <footer>
         </footer>
     </div>
